--- a/speakers.html
+++ b/speakers.html
@@ -1891,6 +1891,58 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Jesman Chonzi -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/Jasman.jpg" alt="Jesman Chonzi" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Jesman Chonzi</h3>
+                  <h4>Regional Industry Manager, IFC - World Bank Group</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalJesmanChonzi"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Grace Kibuthu Ogola -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/Grace Kibuthu.jpg" alt="Grace Kibuthu Ogola" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Grace Kibuthu Ogola</h3>
+                  <h4>Operations Officer, Capital Markets, IFC</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalGraceKibuthuOgola"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
             <!-- Speaker - Matthieu de Heering -->
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="speaker-card" data-category="capital-markets">
@@ -4277,6 +4329,120 @@
                     </p>
                     <p>
                       Since January 2022, He is appointed Managing Director of BVMAC (Bourse des Valeurs Mobilières de l'Afrique Centrale), the Stock exchange company of the CEMAC zone.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Jesman Chonzi -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalJesmanChonzi"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Jasman.jpg"
+                    alt="Jesman Chonzi"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Jesman Chonzi</h3>
+                  <h4>Regional Industry Manager Financial Institutions Group, Eastern Africa, International Finance Corporation</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Ms Jesman Chonzi is the Regional Industry Manager at the International Finance Corporation (IFC), part of the World Bank Group. She oversees IFC's investments and portfolio management in the financial sector across East Africa, focusing on advancing sustainable growth and promoting financial inclusion. With more than two decades of experience in financial markets, Ms Chonzi has held senior roles within both international and regional banks operating across East and Southern Africa. Her expertise in emerging markets focusing on capital markets, structured finance, equity and debt instruments provides her with valuable insight into the distinct challenges and opportunities facing the region.
+                    </p>
+                    <p>
+                      Ms Chonzi holds a Global Executive MBA from IESE Business School (Spain), a Postgraduate Diploma in Financial Management, and a BSc (Hons) in Agriculture - Animal Science from the University of Zimbabwe.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Grace Kibuthu Ogola -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalGraceKibuthuOgola"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Grace Kibuthu.jpg"
+                    alt="Grace Kibuthu Ogola"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Grace Kibuthu Ogola</h3>
+                  <h4>Operations Officer, Capital Markets, International Finance Corporation</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Grace is an Operations Officer, Capital Markets, at the IFC Financial Institutions Group (FIG) based in Addis Ababa, Ethiopia. Grace leads IFC FIG Upstream and Advisory's work on capital market development in Africa.
+                    </p>
+                    <p>
+                      Grace has been leading capital market development programs in Africa since 2007, with the objective of enhancing the ability of capital markets in Africa to support the financing of key development sectors including housing, infrastructure, agribusiness, small businesses and climate mitigation and adaptation activities. She has been involved in capital market development programs and supporting potential upstream capital market transactions across Kenya, Uganda, Tanzania, Rwanda, Burundi, Nigeria, Ghana, Ethiopia, and Namibia; and supporting Kenyan sub-national projects, under the World Bank, among others.
+                    </p>
+                    <p>
+                      Prior to joining IFC, Grace worked at Associates for International Resources and Development (AIRD) in the USA where she provided support to AIRD's senior economists on projects related to international trade, agricultural policy, trade capacity building and regional integration for African countries. She also worked at Cooperative Bank of Kenya on corporate legal affairs and as an intern at the Nairobi Securities Exchange.
+                    </p>
+                    <p>
+                      Grace is an Advocate of the High Court of Kenya, with a Master of Arts in Law and Diplomacy and a Certificate in International Development from The Fletcher School at Tufts University, USA, and a Bachelor of Laws (LL.B) from the University of Nairobi.
                     </p>
                   </div>
                 </div>
