--- a/sponsors.html
+++ b/sponsors.html
@@ -871,12 +871,24 @@
                     class="sponsor-logo"
                   />
                 </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/CPF CAPITAL and ADVISORY Logo.jpg"
+                    alt="CPF CAPITAL and ADVISORY"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/CPF-group-logo.jpg"
+                    alt="CPF GROUP"
+                    class="sponsor-logo"
+                  />
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- Enhanced Sponsors Showcase End -->
-        <!-- End of about-content-text wrapper -->
       </div>
     </section>
     <!-- Sponsorship Main Area End -->
