--- a/speakers.html
+++ b/speakers.html
@@ -1942,6 +1942,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Sheikh Issa Mohamed Hemed -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="islamic-finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/SHEIKH ISSA, MOHAMED HEMED.jpg" alt="Sheikh Issa Mohamed Hemed" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Sheikh Issa Mohamed Hemed</h3>
+                  <h4>Islamic Finance Expert & Sukuk Consultant</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalSheikhIssa"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -4476,6 +4502,66 @@
                     </p>
                     <p>
                       Matthieu is married, and a father of two.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Sheikh Issa Mohamed Hemed -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalSheikhIssa"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/SHEIKH ISSA, MOHAMED HEMED.jpg"
+                    alt="Sheikh Issa Mohamed Hemed"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Sheikh Issa Mohamed Hemed</h3>
+                  <h4>Islamic Finance Expert, Consultant, Advisor and Trainer</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Sheikh Issa is a renowned Tanzania Islamic Finance expert, consultant, advisor and trainer who has twenty years' experience in Islamic finance industry ecosystem.
+                    </p>
+                    <p>
+                      He is a graduate of BA in Islamic Studies and a Certified Sukuk Professional (CSP) who has worked in Islamic Finance advisory, training and consultancy in a number of both public and private sector including establishment of legal and regulatory frameworks for Ministries of Finance, Capital Markets Authorities in Tanzania, Tanzania and Uganda—as a Consultant to United Nations Economic Commission for Africa (UNECA) and Rwanda Stock Exchange (RSE); Islamic Banking Regulations under Bank of Tanzania, Takaful Insurance Guidelines under Tanzania Insurance Regulatory Authority (TIRA).
+                    </p>
+                    <p>
+                      Sheikh Issa has provided trainings on Islamic Banking to the Bank of Tanzania, Takaful Insurance to Tanzania Insurance Regulatory Authority (TIRA) and Islamic Capital Markets and Products to Tanzania's Capital Markets and Securities Authority (CMSA), Zambia's Lusaka Stock Exchange (LuSE) and Uganda Capital Markets Authority (CMA). In 2021 he was among ten (10) Islamic Capital Markets experts from across the globe who trained Bangladesh Financial regulators and practitioners in Sukuk.
+                    </p>
+                    <p>
+                      He is currently serving as a Consultant to the Revolutionary Government of Zanzibar (RGoZ) as its Quasi-Sovereign Sukuk Consultant and The Peoples' Bank of Zanzibar (Ikhlas) Shari'ah Advisor.
                     </p>
                   </div>
                 </div>
