--- a/speakers.html
+++ b/speakers.html
@@ -1936,6 +1936,58 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Tiaan Bazuin -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Tiaan.jpg" alt="Tiaan Bazuin" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Tiaan Bazuin</h3>
+                  <h4>Chief Executive Officer, Namibian Stock Exchange</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalTiaanBazuin"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Selloua Chakri -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="fintech">
+                <div class="speaker-image">
+                  <img src="img/speakers/Selloua Chakri.jpg" alt="Selloua Chakri" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Selloua Chakri</h3>
+                  <h4>Founder & Managing Director, SCL Advisory & SCL Capital</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalSellouaChakri"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -4530,6 +4582,126 @@
                     </p>
                     <p>
                       He is currently serving as a Consultant to the Revolutionary Government of Zanzibar (RGoZ) as its Quasi-Sovereign Sukuk Consultant and The Peoples' Bank of Zanzibar (Ikhlas) Shari'ah Advisor.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Tiaan Bazuin -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalTiaanBazuin"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Tiaan.jpg"
+                    alt="Tiaan Bazuin"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Tiaan Bazuin</h3>
+                  <h4>Chief Executive Officer, Namibian Stock Exchange</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Tiaan Bazuin is the Chief Executive Officer of the Namibian Stock Exchange since 2013 and has served on various Boards including Chairman of the Namibian Employers Association of Namibia.
+                    </p>
+                    <p>
+                      Tiaan is a Lawyer and economist and was admitted as Legal Practitioner in the High Court of Namibia in 2006 with broad management experience in banking, telecommunications and capital markets.
+                    </p>
+                    <p>
+                      Tiaan is a co-author of the Namibian Corporate Governance Code.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Selloua Chakri -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalSellouaChakri"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Selloua Chakri.jpg"
+                    alt="Selloua Chakri"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Selloua Chakri</h3>
+                  <h4>Founder & Managing Director, SCL Advisory Limited & SCL Capital Limited</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Selloua Chakri is Founder and Managing Director of SCL Advisory Limited ("SCL Advisory"), a leading firm that delivers data and technology advisory services to financial institutions in emerging and frontier markets. Under her leadership, SCL Advisory has become a trusted partner for clients looking to harness the power of data and technology to drive revenue growth and unlock new opportunities.
+                    </p>
+                    <p>
+                      In addition to her role at SCL Advisory, Selloua also serves as Managing Director of SCL Capital Limited ("SCL Capital"), a London-based financial services firm (FCA-registered) specializing in capital raising across both private and public markets. SCL Capital provides expert guidance and innovative solutions for companies seeking funding through debt and equity, enabling them to achieve their strategic objectives and thrive in competitive markets.
+                    </p>
+                    <p>
+                      Before founding these ventures, Selloua built a distinguished career with some of the world's leading information and technology providers. Her professional experience includes key roles at Bloomberg Ventures (Bloomberg Beta), Bloomberg L.P., Thomson Reuters (now LSEG), and Dow Jones, where she honed her expertise in financial markets, data analytics, and cutting-edge technology solutions.
+                    </p>
+                    <p>
+                      Selloua's deep understanding of the financial landscape, combined with her entrepreneurial spirit, positions her as a thought leader and innovator in the field. Her extensive experience working with global markets, along with her commitment to delivering exceptional value to clients, continues to drive the success of her businesses and the organizations they serve.
+                    </p>
+                    <p>
+                      Selloua's leadership philosophy centers on leveraging data and technology as transformative tools, not only to meet today's challenges but also to create sustainable growth for the future. Through her work, she has made a lasting impact on financial institutions, particularly in the dynamic emerging and frontier markets.
                     </p>
                   </div>
                 </div>
