speakers added and sponsor edited

--- a/speakers.html
+++ b/speakers.html
@@ -1988,6 +1988,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Bertrand Ndengeyingoma -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="technology">
+                <div class="speaker-image">
+                  <img src="img/speakers/Bertrand.png" alt="Bertrand Ndengeyingoma" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Bertrand Ndengeyingoma</h3>
+                  <h4>Chief Technology & Innovation Officer, Central Bank of Rwanda</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalBertrandNdengeyingoma"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -4702,6 +4728,63 @@
                     </p>
                     <p>
                       Selloua's leadership philosophy centers on leveraging data and technology as transformative tools, not only to meet today's challenges but also to create sustainable growth for the future. Through her work, she has made a lasting impact on financial institutions, particularly in the dynamic emerging and frontier markets.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Bertrand Ndengeyingoma -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalBertrandNdengeyingoma"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Bertrand.png"
+                    alt="Bertrand Ndengeyingoma"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Bertrand Ndengeyingoma</h3>
+                  <h4>Chief Technology & Innovation Officer, Central Bank of Rwanda</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Bertrand Ndengeyingoma is a big tech enthusiast and is currently responsible for the Central Bank of Rwanda (BNR) IT ecosystem, where he holds the Chief Technology & Innovation Officer role.
+                    </p>
+                    <p>
+                      Bertrand has been in the tech field for 18+ years where he worked in different domains such as healthcare, finance, insurance, & telecommunication. He also holds a Masters degree in Information Technology.
+                    </p>
+                    <p>
+                      His other passions are in sports and outdoor activities.
                     </p>
                   </div>
                 </div>
