--- a/sponsors.html
+++ b/sponsors.html
@@ -845,7 +845,7 @@
                 </div>
                 <div class="sponsor-logo-container">
                   <img
-                    src="img/sponsors/AFR.png"
+                    src="img/sponsors/AFR.jpg"
                     alt="AFR"
                     class="sponsor-logo"
                   />
