--- a/speakers.html
+++ b/speakers.html
@@ -978,7 +978,7 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="technology">
               <div class="speaker-image">
-                <img src="img/speakers/Bertrand.png" alt="Bertrand Ndengeyingoma" />
+                <img src="img/speakers/Bertrand.jpg" alt="Bertrand Ndengeyingoma" />
                 <div class="speaker-overlay">
                   <div class="speaker-social">
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -4764,7 +4764,7 @@
               <div class="col-md-4">
                 <div class="speaker-modal-image">
                   <img
-                    src="img/speakers/Bertrand.png"
+                    src="img/speakers/Bertrand.jpg"
                     alt="Bertrand Ndengeyingoma"
                   />
                 </div>
