--- a/sponsors.html
+++ b/sponsors.html
@@ -885,6 +885,48 @@
                     class="sponsor-logo"
                   />
                 </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/Prime_Life_Insurance_Logo.PNG"
+                    alt="Prime Life Insurance"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/ams-logo.png"
+                    alt="AMS"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/MUA.svg"
+                    alt="MUA"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/ncba-logo.png"
+                    alt="NCBA"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/risk-insights.png"
+                    alt="Risk Insights"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/ikeja-hotel.png"
+                    alt="Ikeja Hotel PLC"
+                    class="sponsor-logo"
+                  />
+                </div>
               </div>
             </div>
           </div>
