--- a/judges.html
+++ b/judges.html
@@ -1546,7 +1546,7 @@
           </div>
 
           <!-- Judge 17: Mehul Bhatt -->
-          <div class="col-lg-4 col-md-6 col-sm-6">
+          <!-- <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="judge-card">
               <div class="judge-image">
                 <img src="img/judges/Mehul Bhat.jpg" alt="Mehul Bhatt" />
@@ -1583,7 +1583,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="judge-card">
               <div class="judge-image">
