--- a/speakers.html
+++ b/speakers.html
@@ -2146,6 +2146,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Dr. Edoh Kossi Amenounve -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Edoh Kossi.jpg" alt="Dr. Edoh Kossi Amenounve" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Dr. Edoh Kossi Amenounve</h3>
+                  <h4>CEO, BRVM</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalEdohKossi"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -5272,6 +5298,66 @@
                     </p>
                     <p>
                       She holds a bachelor's degree in economics majoring in Money and Banking, master's in finance & accounting from Mount Kenya University, and a postgraduate certificate in Capital Markets from the George Washington University. She is also a certified compliance professional from the International Academy. Furthermore, she is the co-founder of the Pesos Investment Co.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Dr. Edoh Kossi Amenounve -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalEdohKossi"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Edoh Kossi.jpg"
+                    alt="Dr. Edoh Kossi Amenounve"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Dr. Edoh Kossi Amenounve</h3>
+                  <h4>CEO, BRVM</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Dr. Edoh Kossi Amenounve holds a PhD in Administration and Finance from Laval University in Canada (1995) after an MBA (1992).
+                    </p>
+                    <p>
+                      Before taking office as Chief Executive Officer (CEO) of the Bourse Régionale des Valeurs Mobilières (BRVM) and the Central Depository/Settlement Bank (DC/BR) in October 2012, Dr. Edoh Kossi Amenounve was from September 2003 to September 2012 Secretary General of West African Monetary Union Financial Markets Authority (AMF-UMOA). He was CEO of the DC/BR from 2012 to 2022.
+                    </p>
+                    <p>
+                      Dr. Amenounve is a former Chairman of the West African Capital Markets Integration Council (WACMIC) and former President of the African Securities Exchanges Association (ASEA).
+                    </p>
+                    <p>
+                      Since July 2021, Dr Amenounve is Member of the NASDAQ Exchange Review Council and is considered as one of the most influential finance specialists in Africa.
                     </p>
                   </div>
                 </div>
